--- a/public/404.html
+++ b/public/404.html
@@ -2,25 +2,42 @@
 <html>
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
+  <link href="/assets/application.css" media="screen" rel="stylesheet" type="text/css">
+  <style>
+    #dialog{
+      text-align: center;
     }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    #dialog-inner{
+      width: 450px;
+      margin: 0 auto;
+      text-align: left;
+    }
+    #dialog h1{
+      color: #777;
+    }
+    #dialog p{
+      font-size: 16px;
+    }
+    #dialog a{
+      color: #f7941e;
+    }
   </style>
 </head>
-
 <body>
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+  <div id="wrapper">
+      <div id="main">
+        <h1 id="logo">
+          <a href="/">Shintechchina Wuhan</a>
+        </h1>
+        <div id="dialog">
+          <div id="dialog-inner">
+            <h1>Page not found. (404 Error)</h1>
+            <p>Sorry, we couldn’t find the page you were looking for.</p>
+            <p>You can make a fresh start at <a href="/">home page</a>. Or go somewhere else.</p>
+          </div>
+        </div>
+    </div>
   </div>
 </body>
 </html>
